--- a/www/index.html
+++ b/www/index.html
@@ -136,7 +136,7 @@
 
                             </div>
                             <br>
-                            <input type="button" class="btn btn-3d btn-reveal btn-red" style="width: 100%;" onclick="getlogin()" value="login" />
+                            <input type="button" onclick="getlogin()" value="login" />
                             <!--<a href="about.html" class="btn btn-3d btn-reveal btn-red" style="width: 100%;">
                                 <i class="fa fa-sign-in"></i>
                                 <span>Login</span>
