--- a/www/index.html
+++ b/www/index.html
@@ -68,6 +68,7 @@
         </style>
         <script type = "text/javascript">
             function getlogin() {
+                alert('call');
                 var input_username = $("#Username").val();
                 var input_password = $("#pass").val();
                 //location coordinates,imei(To do),GPS turn on,logoff,
