--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
         <!-- PAGE LEVEL SCRIPTS -->
         <link href="assets/css/header-1.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/color_scheme/red.css" rel="stylesheet" type="text/css" id="color_scheme" />
-
+<script src="js/jquery-3.3.1.js"></script>
         <style>
            
             .login-box{
